refactor: 광범위한 setter 제거