@@ -1,7 +1,7 @@
 package com.chosun.classicwave.service;
 
-import com.chosun.classicwave.domain.Book;
-import com.chosun.classicwave.domain.Member;
+import com.chosun.classicwave.entity.Book;
+import com.chosun.classicwave.entity.Member;
 import com.chosun.classicwave.dto.request.BookCreateRequest;
 import com.chosun.classicwave.dto.domain.BookDto;
 import com.chosun.classicwave.dto.request.EBookRequest;
@@ -27,8 +27,14 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.*;
+
+/**
+ * Todo
+ * 검색 함수 (searchToNaver) 재사용성 생각해서 리팩토링
+ */
 
 @Service
 @RequiredArgsConstructor
@@ -43,6 +49,7 @@ public class BookService {
     private final static String EBOOK_REQUEST_PREFIX = "ebookRequest";
     private final static String SORTED_TOTAL_LIKES_KEY = "sorted:total_like";
     private final static String MEMBER_LIKE_KEY_PREFIX = "like:member:"; // 유저가 관심 등록 한 책의 id list를 찾는 key
+    private final static int SEARCH_RESULT_LIMIT = 10;
     private final static int PAGE_SIZE = 10;
 
     public void postToScheduler(EBookRequest bookRequest) {
@@ -60,19 +67,11 @@ public class BookService {
         return new BookDto(book);
     }
 
-    public Book saveBook(EBookRequest bookRequest, PlotListResponse sceneListResponse) {
-        Book book = bookRequest.toEntity();
-        book.setAuthorName(sceneListResponse.author());
-        book.setPublishedYear(sceneListResponse.pubYear());
-        return bookRepository.save(book);
-    }
-
     @Transactional(readOnly = true)
     public Optional<BookDto> search(String searchText) {
         Optional<Book> optionalBook = bookRepository.findFirstByNameContaining(searchText);
         if (optionalBook.isPresent()) {
             Book book = optionalBook.get();
-            System.out.println(new BookDto(book));
             return Optional.of(new BookDto(book));
         }
 
@@ -82,15 +81,8 @@ public class BookService {
 
     public NaverBookResponse searchToNaver(String searchText) {
         // encode query to utf-8
-        String encodedSearchText;
-        try {
-            encodedSearchText = URLEncoder.encode(searchText, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-            throw new CustomException(ErrorCode.INTERNAL_SERVER_ERROR);
-        }
-
-        return naverBookClient.searchBooks(encodedSearchText, 1);
+        String encodedSearchText = URLEncoder.encode(searchText, StandardCharsets.UTF_8);
+        return naverBookClient.searchBooks(encodedSearchText, SEARCH_RESULT_LIMIT);
     }
 
     /**
@@ -157,55 +149,5 @@ public class BookService {
 
         return new PageImpl<>(bookDtoList, pageable, size);
     }
-
-
-    @Transactional
-    public void createTestBookList() {
-
-        List<Book> bookList = new ArrayList<>();
-
-        for (int i = 1; i <= 11; i++) {
-            Book book = Book.builder()
-                    .name("test book title" + i)
-                    .authorName("test book author" + i)
-                    .folderName(UUID.randomUUID().toString())
-                    .publishedYear(1234)
-                    .createdTime(LocalDateTime.now())
-                    .sceneList(new ArrayList<>())
-                    .build();
-
-            bookList.add(book);
-        }
-
-        bookList = bookRepository.saveAll(bookList);
-        for (Book book : bookList) {
-            redisTemplate.opsForZSet().add(SORTED_TOTAL_LIKES_KEY, book.getId().toString(), 1);
-
-        }
-    }
-
-    //책 정보를 직접 입력해 추가
-    public BookCreateResponse createBookDirect(BookCreateRequest request){
-
-        Book book = Book.builder()
-                .name(request.getBookName())
-                .authorName(request.getAuthor_name())
-                .folderName(request.getFolder_name())
-                .build();
-
-        Book saveBook = bookRepository.save(book);
-
-        BookCreateResponse response = new BookCreateResponse(
-                saveBook.getName(),
-                saveBook.getCreatedTime(),
-                saveBook.getAuthorName(),
-                saveBook.getFolderName()
-        );
-
-        return response;
-    }
-
-    //test
-
 
 }
